8090249: [Linux] Restoring owner stage after minimize does not restore position of child stage

Reviewed-by: kcr